Mon Jul 21 23:27:31 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * bin/dcps_tests.lst:

        Added Instances tests

Mon Jul 21 23:21:04 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances/PubDriver.h:

          Removed unneccessary datawriter vector

Mon Jul 21 19:25:59 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/TransportClient.h:

          Clean up comments related to TransportClient::send_links_.

        * dds/DdsDcpsSubscriptionExt.idl:

          Avoid Doxygen treating comment as a general comment about
          OpenDDS namespace.

Mon Jul 21 17:30:47 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * bin/dcps_tests.lst:

          Fix misleading header comments.

Mon Jul 21 15:30:57 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tools/excelRTD/RTDServerDLL.cpp:

          Reverted previous change.

Fri Jul 18 23:04:50 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances/README:
        * tests/DCPS/Instances/run_test.pl:

          Updated README and modified run_test.pl's argument processing

Fri Jul 18 17:35:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tools/excelRTD/RTDServerDLL.cpp:

                Fixed build error for wide-char builds.

Fri Jul 18 16:24:37 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances/PubDriver.h:

          Made std::string topic_name const

        * tests/DCPS/Instances/SubDriver.h:

          Provided template call parameter to topic_facade.reader()
          method to set DATAREADER_QOS_USE_TOPIC_QOS QOS property when
          creating a datareader.

          Made std::string topic_name const

Fri Jul 18 00:14:49 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances:

          Updated svn:ignore list
