@@ -11,9 +11,12 @@
 #include "TestException.h"
 #include "tests/Utils/DDSApp.h"
 #include "tests/Utils/Options.h"
+#include <dds/DCPS/Service_Participant.h>
 #include "PubDriver.h"
 #include <sstream>
 #include <stdexcept>
+
+#include "dds/DCPS/StaticIncludes.h"
 
 
 int
