@@ -1,3 +1,11 @@
+Tue Jul 22 20:28:21 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>
+
+        * tests/DCPS/Instances/Publisher.cpp:
+        * tests/DCPS/Instances/Subscriber.cpp:
+
+        Added static build required headers StaticIncludes.h and 
+        Service_Participant.h 
+
 Mon Jul 21 23:27:31 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>
 
         * bin/dcps_tests.lst:
